--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ConduitLLC/ico-smartcontracts#readme",
   "dependencies": {
+    "web3": "^1.0.0-beta2",
     "zeppelin-solidity": "1.6.0"
   }
 }
